[project]
name = "tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytelegrambotapi>=4.31.0",
    "sqlalchemy[asyncio]>=2.0.47",
]
